--- a/game.html
+++ b/game.html
@@ -16,26 +16,6 @@
             text-align: center;
         }
 
-        #playButton {
-            background: url('red.png') no-repeat center;
-            background-size: contain;
-            width: 80%;
-            max-width: 300px;
-            height: 80%;
-            max-height: 300px;
-            border: none;
-            cursor: pointer;
-            position: relative;
-        }
-
-        #playText {
-            position: absolute;
-            top: -100px;
-            font-size: 4rem;
-            font-weight: bold;
-            color: white;
-        }
-
         #turnMessage {
             font-size: 2.5rem;
             margin-bottom: 20px;
@@ -47,30 +27,33 @@
             display: none;
         }
 
-        #pauseButton, #resetButton {
-            font-size: 2rem;
+        .button {
+            font-size: 1.5rem;
             padding: 10px 20px;
+            margin: 10px;
             border: none;
             cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
             border-radius: 5px;
-            display: none;
+        }
+
+        .button.disabled {
+            background-color: lightgray;
+            cursor: not-allowed;
+        }
+
+        #startButton {
+            background-color: red;
+            color: white;
         }
 
         #pauseButton {
-            background-color: #FFA500; /* Orange for pause */
+            background-color: orange;
+            color: white;
         }
 
-        #resetButton {
-            background-color: #FF0000; /* Red for reset */
-        }
-
-        #twistAgainText {
-            font-size: 3rem;
-            color: red;
-            display: none;
-            margin-bottom: 20px;
+        #nextButton {
+            background-color: green;
+            color: white;
         }
 
         #scoreboard {
@@ -91,7 +74,7 @@
         }
 
         th:first-child {
-            width: 10%; /* Restringi la colonna POSITION */
+            width: 10%;
         }
 
         .points-buttons {
@@ -101,26 +84,17 @@
         }
 
         @media (max-width: 768px) {
-            #playText {
-                font-size: 3rem;
+            #turnMessage {
+                font-size: 2rem;
             }
 
             #countdown {
                 font-size: 3rem;
             }
 
-            #playButton {
-                width: 60%;
-                height: 60%;
-            }
-
-            #pauseButton, #resetButton {
-                font-size: 1.5rem;
+            .button {
+                font-size: 1.2rem;
                 padding: 5px 15px;
-            }
-
-            #twistAgainText {
-                font-size: 2rem;
             }
         }
     </style>
@@ -128,17 +102,14 @@
 <body>
 
     <h1 id="turnMessage"></h1> <!-- Messaggio del turno corrente -->
-    
-    <div id="playText">PLAY!</div>
-    <button id="playButton"></button>
 
-    <div id="twistAgainText">LET'S TWIST AGAIN!</div>
+    <div>
+        <button id="startButton" class="button">START</button>
+        <button id="pauseButton" class="button disabled" disabled>PAUSE</button>
+        <button id="nextButton" class="button disabled" disabled>NEXT</button>
+    </div>
+
     <div id="countdown">20</div>
-    <button id="pauseButton">PAUSE</button>
-    <button id="resetButton">RESET</button>
-
-    <audio id="audioA" src="lets_twist_again.mp3"></audio>
-    <audio id="audioB" src="countdown.mp3"></audio>
 
     <div id="scoreboard">
         <h2>Scoreboard</h2>
@@ -154,6 +125,9 @@
         </table>
     </div>
 
+    <audio id="audioA" src="lets_twist_again.mp3"></audio>
+    <audio id="audioB" src="countdown.mp3"></audio>
+
     <script>
         let isPlaying = false;
         let currentAudio = null;
@@ -165,44 +139,47 @@
         // Get players from localStorage
         const players = JSON.parse(localStorage.getItem('players'));
 
+        // DOM Elements
+        const startButton = document.getElementById("startButton");
+        const pauseButton = document.getElementById("pauseButton");
+        const nextButton = document.getElementById("nextButton");
+        const countdown = document.getElementById("countdown");
+        const turnMessage = document.getElementById("turnMessage");
+
         // Play button functionality
-        document.getElementById("playButton").addEventListener("click", function () {
+        startButton.addEventListener("click", function () {
             startCountdown();
             playRandomAudio();
+            toggleButtons("pause");
         });
 
         // Pause button functionality
-        document.getElementById("pauseButton").addEventListener("click", function () {
+        pauseButton.addEventListener("click", function () {
             pauseCountdown();
-            resetState(); // Reset the page to the initial state
+            toggleButtons("next");
         });
 
-        // Reset button functionality
-        document.getElementById("resetButton").addEventListener("click", function () {
-            resetState();
+        // Next button functionality
+        nextButton.addEventListener("click", function () {
+            updatePlayerTurn();
+            resetState(); // Reset the page to the initial state
+            toggleButtons("start");
         });
 
         // Function to start the countdown
         function startCountdown() {
-            // Hide play button and play text, show countdown and pause button
-            document.getElementById("playButton").style.display = 'none';
-            document.getElementById("playText").style.display = 'none';
-            document.getElementById("countdown").style.display = 'block';
-            document.getElementById("pauseButton").style.display = 'block';
-
+            countdown.style.display = 'block';
             countdownValue = 20;
-            document.getElementById("countdown").innerText = countdownValue;
+            countdown.innerText = countdownValue;
 
             countdownInterval = setInterval(function() {
                 countdownValue--;
                 if (countdownValue > 0) {
-                    document.getElementById("countdown").innerText = countdownValue;
+                    countdown.innerText = countdownValue;
                 } else {
                     clearInterval(countdownInterval);
-                    document.getElementById("countdown").innerText = "STOP!";
-                    document.getElementById("pauseButton").style.display = 'none';
-                    document.getElementById("resetButton").style.display = 'block';
-                    updatePlayerTurn(); // Avanza il turno senza assegnare punti
+                    countdown.innerText = "STOP!";
+                    toggleButtons("next"); // Attiva il bottone NEXT
                 }
             }, 1000); // Countdown every second
         }
@@ -212,10 +189,8 @@
             let random = Math.random();
             if (random < 0.3) { // 30% chance
                 currentAudio = document.getElementById("audioA");
-                document.getElementById("twistAgainText").style.display = 'block'; // Show "LET'S TWIST AGAIN!"
             } else { // 70% chance
                 currentAudio = document.getElementById("audioB");
-                document.getElementById("twistAgainText").style.display = 'none'; // Hide "LET'S TWIST AGAIN!"
             }
             currentAudio.play();
             isPlaying = true;
@@ -226,36 +201,80 @@
             clearInterval(countdownInterval);
             if (currentAudio) {
                 currentAudio.pause();
-                currentAudio.currentTime = 0; // Reset audio to the start
             }
         }
 
         // Function to reset the state of the page
         function resetState() {
-            // Reset audio and countdown
             if (currentAudio) {
                 currentAudio.pause();
                 currentAudio.currentTime = 0; // Reset audio
             }
-            countdownValue = 20;
-            document.getElementById("countdown").innerText = countdownValue;
-
-            // Show play button and text, hide reset, countdown, and pause button
-            document.getElementById("playButton").style.display = 'block';
-            document.getElementById("playText").style.display = 'block';
-            document.getElementById("resetButton").style.display = 'none';
-            document.getElementById("pauseButton").style.display = 'none';
-            document.getElementById("countdown").style.display = 'none';
-            document.getElementById("twistAgainText").style.display = 'none';
+            countdown.innerText = 20;
+            countdown.style.display = 'none';
             isPlaying = false;
         }
 
-        // Update player turn logic
+        // Function to update the player's turn
         function updatePlayerTurn() {
             currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
             const currentPlayer = players[currentPlayerIndex];
-            document.getElementById('turnMessage').textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
-            document.getElementById('turnMessage').style.color = currentPlayer.color;
+            turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
+            turnMessage.style.color = currentPlayer.color;
+        }
+
+        // Function to toggle button states
+        function toggleButtons(active) {
+            if (active === "start") {
+                startButton.disabled = false;
+                startButton.classList.remove("disabled");
+
+                pauseButton.disabled = true;
+                pauseButton.classList.add("disabled");
+
+                nextButton.disabled = true;
+                nextButton.classList.add("disabled");
+            } else if (active === "pause") {
+                startButton.disabled = true;
+                startButton.classList.add("disabled");
+
+                pauseButton.disabled = false;
+                pauseButton.classList.remove("disabled");
+
+                nextButton.disabled = true;
+                nextButton.classList.add("disabled");
+            } else if (active === "next") {
+                startButton.disabled = true;
+                startButton.classList.add("disabled");
+
+                pauseButton.disabled = true;
+                pauseButton.classList.add("disabled");
+
+                nextButton.disabled = false;
+                nextButton.classList.remove("disabled");
+            }
+        }
+
+        // Function to update scoreboard
+        function updateScoreboard() {
+            players.sort((a, b) => b.points - a.points);
+            const scoreboardBody = document.getElementById("scoreboardBody");
+            scoreboardBody.innerHTML = '';
+            players.forEach((player, index) => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${index + 1}°</td>
+                    <td style="background-color: ${player.color}; color: white;">${player.name}</td>
+                    <td>
+                        <div class="points-buttons">
+                            ${player.points}
+                            <button onclick="addPoints(${index})">+</button>
+                            <button onclick="removePoints(${index})">-</button>
+                        </div>
+                    </td>
+                `;
+                scoreboardBody.appendChild(row);
+            });
         }
 
         // Function to add points manually
@@ -283,34 +302,9 @@
 
         // Function to end the game
         function endGame(winnerName, winnerColor) {
-            document.getElementById("playButton").style.display = 'none';
-            document.getElementById("playText").style.display = 'none';
-            document.getElementById("pauseButton").style.display = 'none';
-            document.getElementById("resetButton").style.display = 'none';
-            document.getElementById("countdown").innerText = `${winnerName} WINS!`;
-            document.getElementById("countdown").style.color = winnerColor; // Use winner's color
-        }
-
-        // Function to update scoreboard
-        function updateScoreboard() {
-            players.sort((a, b) => b.points - a.points);
-            const scoreboardBody = document.getElementById("scoreboardBody");
-            scoreboardBody.innerHTML = '';
-            players.forEach((player, index) => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${index + 1}°</td>
-                    <td style="background-color: ${player.color}; color: white;">${player.name}</td>
-                    <td>
-                        <div class="points-buttons">
-                            ${player.points}
-                            <button onclick="addPoints(${index})">+</button>
-                            <button onclick="removePoints(${index})">-</button>
-                        </div>
-                    </td>
-                `;
-                scoreboardBody.appendChild(row);
-            });
+            countdown.innerText = `${winnerName} WINS!`;
+            countdown.style.color = winnerColor;
+            toggleButtons("none");
         }
 
         // Initialize the scoreboard and player turn on page load
