--- a/game.html
+++ b/game.html
@@ -234,7 +234,7 @@
 
         // Function to update the player's turn
         function updatePlayerTurn() {
-            currentPlayerIndex = (currentPlayerIndex) % players.length;
+            currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
             const currentPlayer = players[currentPlayerIndex];
             turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
             turnMessage.style.color = currentPlayer.color;
@@ -246,6 +246,7 @@
                 startButton.disabled = false;
                 startButton.classList.remove("disabled");
                 startButton.style.color = black;
+                console.log ('xxx',    startButton.style.color);
                 pauseButton.disabled = true;
                 pauseButton.classList.add("disabled");
 
