--- a/game.html
+++ b/game.html
@@ -114,7 +114,7 @@
 
     <h1 id="turnMessage"></h1> <!-- Messaggio del turno corrente -->
 
-    <div id="twistAgainText">LET'S TWIST AGAIN!</div>
+    <div id="twistAgainText">xxxLET'S TWIST AGAIN!</div>
 
     <div>
         <button id="startButton" class="button">START</button>
