--- a/game.html
+++ b/game.html
@@ -114,7 +114,7 @@
 
     <h1 id="turnMessage"></h1> <!-- Messaggio del turno corrente -->
 
-    <div id="twistAgainText">xxxLET'S TWIST AGAIN!</div>
+    <div id="twistAgainText">yyyLET'S TWIST AGAIN!</div>
 
     <div>
         <button id="startButton" class="button">START</button>
@@ -245,7 +245,7 @@
             if (active === "start") {
                 startButton.disabled = false;
                 startButton.classList.remove("disabled");
-                startButton.style.color = black;
+                startButton.style.color = 'black';
                 console.log ('xxx',    startButton.style.color);
                 pauseButton.disabled = true;
                 pauseButton.classList.add("disabled");
