--- a/game.html
+++ b/game.html
@@ -112,9 +112,9 @@
 </head>
 <body>
 
-    <h1 id="turnMessage"></h1> <!-- Messaggio del turno corrente -->
+    <h1 id="turnMessage">xxx</h1> <!-- Messaggio del turno corrente -->
 
-    <div id="twistAgainText">yyyLET'S TWIST AGAIN!</div>
+    <div id="twistAgainText">LET'S TWIST AGAIN!</div>
 
     <div>
         <button id="startButton" class="button">START</button>
